deployment/json-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: json-server
    app.kubernetes.io/instance: json-server
  name: json-server
  namespace: product-material-pass
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: json-server
  template:
    metadata:
      labels:
        app: json-server
    spec:
      containers:
        - image: muhammadsaudkhan/json-server
          imagePullPolicy: Always
          name: json-server
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
