deployment/json-server/ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress-auth
  namespace: product-material-pass
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"

    nginx.ingress.kubernetes.io/rewrite-target: /$2
  
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: materialpass.int.demo.catena-x.net
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: json-server
                port:
                  number: 3000
  tls:
    - hosts:
        - materialpass.int.demo.catena-x.net
      secretName: tls-secret
